fix: left-align credibility label on mobile

--- a/src/components/sections/CredibilityBar.module.css
+++ b/src/components/sections/CredibilityBar.module.css
@@ -85,14 +85,11 @@
   letter-spacing: -0.01em;
 }
 
-@media (max-width: 1023px) {
+@media (max-width: 767px) {
   .label {
     text-align: left;
     justify-content: flex-start;
   }
-}
-
-@media (max-width: 767px) {
   .marquee {
     -webkit-mask-image: linear-gradient(to right,
       transparent 0,
